--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         <ul id="todoList">
                 <li style="list-style-type: none;">
                     <span>task 1</span>
-                    <button id="deleteTodo" title="Done and dusted">
+                    <button id="deleteTodo_1" title="Done and dusted">
                         Done
                     </button>  
                 </li>   
                 <li style="list-style-type: none;">
                     <span>task 1</span>
-                    <button id="deleteTodo" title="Done and dusted">
+                    <button id="deleteTodo_2" title="Done and dusted">
                         Done
                     </button>  
                 </li>   
                 <li style="list-style-type: none;">
                     <span>task 1</span>
-                    <button id="deleteTodo" title="Done and dusted">
+                    <button id="deleteTodo_3" title="Done and dusted">
                         Done
                     </button>  
                 </li>   
