added classname to the done button

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         <ul id="todoList">
                 <li style="list-style-type: none;">
                     <span>task 1</span>
-                    <button id="deleteTodo_1" title="Done and dusted">
+                    <button class="deleteTodo" id="deleteTodo_1" title="Done and dusted">
                         Done
                     </button>  
                 </li>   
                 <li style="list-style-type: none;">
-                    <span>task 1</span>
-                    <button id="deleteTodo_2" title="Done and dusted">
+                    <span>task 2</span>
+                    <button class="deleteTodo" id="deleteTodo_2" title="Done and dusted">
                         Done
                     </button>  
                 </li>   
                 <li style="list-style-type: none;">
-                    <span>task 1</span>
-                    <button id="deleteTodo_3" title="Done and dusted">
+                    <span>task 3</span>
+                    <button class="deleteTodo" id="deleteTodo_3" title="Done and dusted">
                         Done
                     </button>  
                 </li>   
